--- a/Assets/06 Monitor/UITK/Monitor UI.uxml
+++ b/Assets/06 Monitor/UITK/Monitor UI.uxml
@@ -21,8 +21,9 @@
                 <VJUITK.VJKnob name="knob-5" label="Streams" high-value="1" />
             </ui:VisualElement>
             <ui:VisualElement name="section" class="control-section">
-                <ui:Label text="Theme" class="control-section-label" />
+                <ui:Label text="BG Fx" class="control-section-label" />
                 <VJUITK.VJKnob name="knob-13" label="Hue" high-value="1" />
+                <VJUITK.VJKnob name="knob-12" label="Mic" high-value="1" value="1" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="row" style="flex-direction: row;">
@@ -44,7 +45,6 @@
             </ui:VisualElement>
             <ui:VisualElement name="section" class="control-section">
                 <ui:Label text="Master" class="control-section-label" />
-                <VJUITK.VJKnob name="knob-12" label="Mic" high-value="1" value="1" />
                 <VJUITK.VJKnob label="Fade" name="knob-14" high-value="1" />
             </ui:VisualElement>
         </ui:VisualElement>
