--- a/Assets/06 Monitor/UITK/Monitor UI.uxml
+++ b/Assets/06 Monitor/UITK/Monitor UI.uxml
@@ -20,6 +20,13 @@
                 <VJUITK.VJKnob name="knob-4" label="Drops" high-value="1" />
                 <VJUITK.VJKnob name="knob-5" label="Streams" high-value="1" />
             </ui:VisualElement>
+            <ui:VisualElement name="section" class="control-section">
+                <ui:Label text="Theme" class="control-section-label" />
+                <VJUITK.VJButton name="button-2" label="Clear" />
+                <VJUITK.VJButton name="button-3" label="Forest" />
+                <VJUITK.VJButton name="button-4" label="Dusk" />
+                <VJUITK.VJButton name="button-5" label="Disco" />
+            </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="row" style="flex-direction: row;">
             <ui:VisualElement name="section" class="control-section">
